Bug 412288 Toolbar menus do not have ATK state focusable patch by Marco Zehe r=ginn.chen, aaronleventhal sr=mtschrep